--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,13 @@
         "cweagans/composer-patches": "^1.6.5",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/address": "^1.4",
-        "drupal/admin_menu": "3.x-dev",
         "drupal/admin_toolbar": "^1.24",
+        "drupal/antibot": "^1.2",
         "drupal/auto_entitylabel": "^2.1@beta",
         "drupal/autologout": "^1.0",
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/bulk_content_operation": "^3.0",
-        "drupal/captcha": "^1.0@beta",
+        "drupal/captcha": "^1.0",
         "drupal/chosen": "^2.6",
         "drupal/clamav": "^1.1",
         "drupal/coffee": "^1.0@beta",
@@ -53,6 +53,7 @@
         "drupal/fontawesome_menu_icons": "^1.4",
         "drupal/force_password_change": "^1.3",
         "drupal/ga_login": "^1.0@alpha",
+        "drupal/honeypot": "^1.29",
         "drupal/imce": "^1.7",
         "drupal/inline_entity_form": "^1.0@RC",
         "drupal/jdrupal": "^1.3",
