--- a/composer.json
+++ b/composer.json
@@ -34,6 +34,7 @@
         "drupal/config_readonly": "^1.0@beta",
         "drupal/console": "^1.0.2",
         "drupal/consumers": "^1.2",
+        "drupal/content_access": "^1.0",
         "drupal/contentimport": "^4.1",
         "drupal/core": "^8.6.0",
         "drupal/crop": "^1.5",
@@ -45,7 +46,7 @@
         "drupal/drupalgap": "^1.0@alpha",
         "drupal/dynamic_entity_reference": "^1.6",
         "drupal/easy_breadcrumb": "^1.8",
-        "drupal/eck": "^1.0@alpha",
+        "drupal/eck": "^1.0",
         "drupal/encrypt": "^3.0@RC",
         "drupal/feeds": "^3.0@alpha",
         "drupal/flexslider": "^2.0@beta",
@@ -63,12 +64,15 @@
         "drupal/message": "^1.0@RC",
         "drupal/metatag": "^1.7",
         "drupal/migrate_source_csv": "^2.2",
+        "drupal/multiple_registration": "^2.6",
         "drupal/password_policy": "^3.0@alpha",
         "drupal/pathauto": "^1.3",
         "drupal/pdf_api": "1.x-dev",
+        "drupal/pdf_using_mpdf8": "^1.0",
         "drupal/permissions_by_term": "^2.4",
         "drupal/printable": "^1.0",
         "drupal/prlp": "^1.3",
+        "drupal/publishcontent": "^1.0",
         "drupal/r4032login": "^1.1",
         "drupal/rabbit_hole": "^1.0@beta",
         "drupal/realname": "^1.0@RC",
