--- a/config/default/sync/block.block.tourismplus_account_menu.yml
+++ b/config/default/sync/block.block.tourismplus_account_menu.yml
@@ -12,8 +12,8 @@ _core:
   default_config_hash: sedi81lar511qJTAw71Em9Ru4yqwKMYH_p2-M--a-74
 id: tourismplus_account_menu
 theme: tourismplus
-region: hidden_blocks_collection
-weight: -5
+region: header_third
+weight: -11
 provider: null
 plugin: 'system_menu_block:account'
 settings:
