--- a/config/default/sync/block.block.views_block__course_allocation2_block_1.yml
+++ b/config/default/sync/block.block.views_block__course_allocation2_block_1.yml
@@ -12,8 +12,8 @@ dependencies:
     - tourismplus
 id: views_block__course_allocation2_block_1
 theme: tourismplus
-region: system_messages
-weight: 0
+region: hidden_blocks_collection
+weight: 1
 provider: null
 plugin: 'views_block:course_allocation2-block_1'
 settings:
