--- a/config/default/sync/block.block.webform.yml
+++ b/config/default/sync/block.block.webform.yml
@@ -6,14 +6,13 @@ dependencies:
     - webform.webform.submit_grade
   module:
     - system
-    - user
     - webform
   theme:
     - tourismplus
 id: webform
 theme: tourismplus
-region: content_top
-weight: 0
+region: hidden_blocks_collection
+weight: -2
 provider: null
 plugin: webform_block
 settings:
@@ -30,10 +29,3 @@ visibility:
     pages: '<front>'
     negate: false
     context_mapping: {  }
-  user_role:
-    id: user_role
-    roles:
-      lecturers: lecturers
-    negate: false
-    context_mapping:
-      user: '@user.current_user_context:current_user'
