--- a/config/default/sync/user.role.authenticated.yml
+++ b/config/default/sync/user.role.authenticated.yml
@@ -18,4 +18,5 @@ permissions:
   - 'skip comment approval'
   - 'use text format basic_html'
   - 'view any webform submission'
+  - 'view own unpublished content'
   - 'view printer friendly versions'
