--- a/config/default/sync/views.view.course_allocation.yml
+++ b/config/default/sync/views.view.course_allocation.yml
@@ -4,8 +4,17 @@ status: true
 dependencies:
   config:
     - system.menu.main
+    - user.role.administrator
+    - user.role.authenticated
+    - user.role.create_nu_grades
+    - user.role.dean
+    - user.role.head_of_department
+    - user.role.secretariats
+    - user.role.students
+    - user.role.submitgrade
     - webform.webform.course_allocation
   module:
+    - user
     - views_bootstrap
     - webform
     - webform_views
@@ -25,8 +34,17 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: role
+        options:
+          role:
+            authenticated: authenticated
+            administrator: administrator
+            secretariats: secretariats
+            submitgrade: submitgrade
+            head_of_department: head_of_department
+            create_nu_grades: create_nu_grades
+            students: students
+            dean: dean
       cache:
         type: tag
         options: {  }
@@ -602,6 +620,7 @@ display:
         - 'languages:language_interface'
         - url
         - user
+        - user.roles
       tags: {  }
   page_1:
     display_plugin: page
@@ -622,4 +641,5 @@ display:
         - 'languages:language_interface'
         - url
         - user
+        - user.roles
       tags: {  }
