--- a/config/default/sync/views.view.head_of_department.yml
+++ b/config/default/sync/views.view.head_of_department.yml
@@ -471,14 +471,14 @@ display:
           webform_multiple_value: true
           webform_multiple_delta: 0
           plugin_id: webform_submission_field
-        completed:
-          id: completed
-          table: webform_submission
-          field: completed
+        webform_submission_value_8:
+          id: webform_submission_value_8
+          table: webform_submission_field_grade_checking_system_sgpa
+          field: webform_submission_value
           relationship: none
           group_type: group
           admin_label: ''
-          label: Completed
+          label: SGPA
           exclude: false
           alter:
             alter_text: false
@@ -519,25 +519,10 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: timestamp
-          settings:
-            date_format: medium
-            custom_date_format: ''
-            timezone: ''
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: webform_submission
-          entity_field: completed
-          plugin_id: field
+          webform_element_format: value
+          webform_multiple_value: true
+          webform_multiple_delta: 0
+          plugin_id: webform_submission_field_numeric
         uid:
           id: uid
           table: webform_submission
